--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "build": "rimraf lib themes && run-s build:js build:css build:css:min build:ssr build:cover",
     "pub:next": "cross-env RELEASE_TAG=next sh build/release.sh",
     "pub": "sh build/release.sh",
-    "postinstall": "opencollective postinstall"
+    "postinstall": "opencollective-postinstall"
   },
   "dependencies": {
     "marked": "^0.7.0",
